# Multivac-Refactored

./: .gitignore  .replit  check_instructions.py  claude_utils.py  config.py  context_broker.py  database_utils.py  discord_bot.py  gemini_utils.py  git_utils.py  google_search.py  keep_alive.py  list_models.py  logger_setup.py  main.py  memory_utils.py  openai_utils.py  progress.py  pyproject.toml  readme.md  replit.nix  sora_utils.py  stability_utils.py  stock_utils.py  task.md  time_context.py  tools_registry.py  url_utils.py  usage_costs.py  verification_script.py  walkthrough.md
attached_assets/: Pasted-import-sys-import-logging-import-discord-import-re-from-discord-ext-import-commands-from-config-1744932933093.txt
bot/: __init__.py  chat_context.py  chat_handler.py  image_handler.py  intent_dispatcher.py  message_inputs.py  moderation_view.py  provider_intents.py  ui_messages.py  video_handler.py
dev/: bootstrap_index.py  check_env.py
docs/: document.txt
providers/: __init__.py  gemini_client.py  gemini_images.py  gemini_text.py  gemini_utils.py  openai_client.py  openai_images.py  openai_intents.py  openai_messages.py  openai_utils.py  sora_client.py  sora_jobs.py  sora_utils.py  stability_client.py  stability_generation.py  stability_utils.py
scripts/: check_models.py  check_openai_models.py  inspect_openai.py  inspect_openai_v2.py  inspect_openai_v3.py  migrate_sora_db.py  probe_endpoints.py  probe_v2.py  probe_v3.py  probe_v4.py  probe_video.py
services/: database_utils.py  git_utils.py  keep_alive.py  logging_config.py  memory_client.py  tool_specs.py  (+10 more)
