package-mode = false
[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "^0.27.2"
openweathermapy = "^0.6.6"
Pillow = "^10.0.0"
discord = "^2.2.2"
googlemaps = "^4.10.0"
httpx = "^0.23.3"
requests = "^2.31.0"
aiohttp = "^3.8.6"
config = "^0.5.1"
"discord.py" = "^2.3.2"
stability-sdk = "^0.8.6"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
readability-lxml = "^0.8.1"
lxml_html_clean = "^0.1.1"
youtube-transcript-api = "^0.6.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
